# stars-ad-permission-analyzer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/ad_resolver/: Cargo.toml
crates/ad_resolver/src/: config.rs  enumerate.rs  ldap_client.rs  lib.rs  local_groups.rs  principal.rs  resolver.rs  sam.rs  sid_util.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  model.rs  traits.rs
crates/exporter/: Cargo.toml
crates/exporter/src/: csv.rs  html.rs  json.rs  lib.rs  trustees.rs
crates/fs_scanner/: Cargo.toml
crates/fs_scanner/src/: acl.rs  cancel.rs  lib.rs  scanner.rs  walker.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  main.rs  worker.rs
crates/permission_engine/: Cargo.toml
crates/permission_engine/src/: engine.rs  lib.rs  mask.rs
crates/permission_engine/tests/: windows_conformance.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: db.rs  delta.rs  identity_cache.rs  lib.rs  migrations.rs  scan_store.rs  schema.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql  schema_v5.sql  schema_v6.sql  schema_v7.sql
crates/risk_engine/: Cargo.toml
crates/risk_engine/src/: lib.rs  rules.rs
crates/share_scanner/: Cargo.toml
crates/share_scanner/src/: lib.rs  scanner.rs
crates/update_manager/: Cargo.toml  build.rs  update_manager.exe.manifest
crates/update_manager/src/: lib.rs  manager.rs  manifest.rs  verifier.rs
crates/validation/: Cargo.toml
crates/validation/src/: db_path.rs  export_path.rs  ldap.rs  lib.rs  net.rs  numbers.rs  path.rs  sid.rs
crates/win_safe/: Cargo.toml
crates/win_safe/src/: lib.rs  localalloc.rs  netapi.rs
docs/: anwender-handbuch.md  audit-criteria.md  audit-kriterien.md  can-stars-help-you.md  codesigning.md  features-and-limitations.md  index.html  installation-and-uninstallation.md  installation-und-deinstallation.md  known-limitations.md  owner-rights-sid-s-1-3-4.md  scan-historie-und-datenbank.md  scan-history-and-database.md  technical-documentation.md  technische-dokumentation.md  user-guide.md
docs/adr/: 0001-core-engine-before-gui.md  0002-adpa-core-crate-name.md  0003-ntfs-dacl-reading.md  0004-ace-normalization.md  0005-cli-prototype.md  0006-csv-export.md  0007-sqlite-cache.md  0008-multi-folder-scan.md  0009-smb-share-scanner.md  0010-ntfs-share-combination.md  0011-gui-egui-prototype.md  0012-access-check-semantics.md  0013-access-context.md  0014-ldap-paging-and-transitive-groups.md  0015-long-path-normalization.md  0016-gui-scan-error-persistence.md  0017-share-scan-preserves-null-dacl.md  0018-csv-export-audit-completeness.md  0019-share-token-uses-access-context.md  0020-matched-aces-excludes-inherit-only.md  0021-permission-diagnostics-vector.md  0022-scan-depth-validation-at-cli-gui-boundary.md  0023-share-dacl-stored-order-evaluation.md  0024-unsupported-share-aces-structured-diagnostic.md  0025-null-dacl-classification-fix.md  0026-share-scan-result-carries-share-dacl-scan.md  0027-sensitive-path-rule-requires-effective-access.md  0028-update-manager-skeleton.md  0029-membership-path-reconstruction.md  0030-update-manager-path-validation-and-policy-split.md  0031-shared-unc-components-and-effective-smb-target.md  0032-identity-input-dispatcher-and-ldap-timeouts.md  0033-visible-diagnostics-for-sam-fallback-and-disabled-identities.md  0034-multi-domain-lsa-fallback-for-identity-resolution.md  0035-sam-disabled-status-via-netusergetinfo.md  0036-unified-principal-resolution-pipeline.md  0037-validated-wrappers-propagated.md  0038-share-trustees-in-scan-output.md  0039-failed-resolution-diagnostics.md  0040-local-group-candidate-name-list.md  (+15 more)
docs/lab/: README.md  forest-topology.md  setup-procedure.md  verification.md
docs/lab/scripts/: 01-clone-templates.sh  02-prepare-vms.sh  03-promote-forests.sh  04-reboot-and-wait.sh  05-conditional-forwarders.sh  06-forest-trusts.sh  07-testdata.sh  08-stars-smoke.sh  09-blockA-edge-cases.sh  10-blockB-gui-smoke.sh  11-blockC-ad-bulk.sh  12-blockC-dirs-acls.sh  13-blockC-stars-perf.sh  14-blockD-network-context.sh  README.md
docs/testing/: integration-test-setup.md
installer/: setup.nsi
scripts/: check-language.py  check-language.sh  verify-grp-geschaeftsleitung.ps1
scripts/test-env/: 01-setup-dc.ps1  02-setup-ad-objects.ps1  03-setup-fileserver.ps1  04-run-integration-tests.ps1  99-teardown.ps1  README.md
