[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ad_resolver",
    "crates/fs_scanner",
    "crates/share_scanner",
    "crates/permission_engine",
    "crates/risk_engine",
    "crates/persistence",
    "crates/exporter",
    "crates/update_manager",
    "crates/validation",
    "crates/cli",
    "crates/gui",
]

[workspace.package]
version = "1.1.1"
edition = "2021"
authors = ["Birger Labinsch — Fachinformatiker AE / Prompt Engineer <birger@labinsch.de>"]
license = "proprietary"

[workspace.dependencies]
# Fehlerbehandlung / Error handling
thiserror = "2"
anyhow = "1"

# Serialisierung / Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows API
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_WNet",
    "Win32_System_SystemInformation",
] }

# LDAP / Active Directory
ldap3 = "0.11"

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# UUID fuer Scan-IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Zeitstempel / Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Prüfsummen / Checksums (fuer update_manager)
sha2 = "0.10"
hex = "0.4"

# CSV-Export
csv = "1"

# GUI
# wgpu-Backend statt glow (OpenGL): glow scheitert in RDP-Sessions auf
# Windows Server am fehlenden Hardware-OpenGL-Kontext (Fenster öffnet,
# wird schwarz, schließt sich). wgpu nutzt unter Windows DirectX 12 /
# DXGI, das auch über RDP zuverlässig funktioniert.
# wgpu backend instead of glow (OpenGL): glow fails in RDP sessions on
# Windows Server because there is no hardware OpenGL context (window
# opens, turns black, closes). wgpu uses DirectX 12 / DXGI under
# Windows, which works reliably over RDP.
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.31"
