[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/win_safe",
    "crates/ad_resolver",
    "crates/fs_scanner",
    "crates/share_scanner",
    "crates/permission_engine",
    "crates/risk_engine",
    "crates/persistence",
    "crates/exporter",
    "crates/update_manager",
    "crates/validation",
    "crates/cli",
    "crates/gui",
]

[workspace.package]
version = "1.7.2"
edition = "2021"
authors = ["Birger Labinsch — Certified IT Specialist (Application Development) / Prompt Engineer <birger@labinsch.de>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialisierung / Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows API
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_NetworkManagement_NetManagement",
    "Win32_NetworkManagement_WNet",
    "Win32_System_SystemInformation",
] }

# LDAP / Active Directory
# `gssapi` enables SASL GSSAPI/Kerberos binds; on Windows it uses the
# system SSPI, which lets Stars do a signed+sealed bind on port 389
# (satisfying a hardened DC's LDAP-signing requirement without a
# certificate). See ADR 0051.
ldap3 = { version = "0.11", features = ["gssapi"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# UUIDs for scan IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Checksums (for update_manager)
sha2 = "0.10"
hex = "0.4"

# CSV export
csv = "1"

# GUI: see crates/gui/Cargo.toml. Slint is used; the historical
# eframe/egui workspace entries were removed in 2026-06-08 after they
# became unreachable in the GUI rewrite.
