[package]
name = "exporter"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adpa_core = { path = "../core" }
permission_engine = { path = "../permission_engine" }
share_scanner = { path = "../share_scanner" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
csv.workspace = true
chrono.workspace = true

[target.'cfg(windows)'.dependencies]
ad_resolver = { path = "../ad_resolver" }
