[package]
name = "fs_scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adpa_core = { path = "../core" }
validation = { path = "../validation" }
win_safe = { path = "../win_safe" }
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
windows-sys.workspace = true
tokio.workspace = true
