[package]
name = "persistence"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adpa_core = { path = "../core" }
permission_engine = { path = "../permission_engine" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rusqlite.workspace = true
uuid.workspace = true
chrono.workspace = true
