[package]
name = "share_scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adpa_core = { path = "../core" }
permission_engine = { path = "../permission_engine" }
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
windows-sys.workspace = true
tokio.workspace = true
