[package]
name = "update_manager"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
adpa_core = { path = "../core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
tokio.workspace = true
