[package]
name = "win_safe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# eine fachliche Crate zu verwaessern.
#
# Concept: this crate wraps Windows API resources in RAII guards so
# every success path AND every early-return path (especially `?`)
# returns the resource correctly. Introduced for review round 10
# finding 3 (NetApi buffer leak on DACL parse failure); deliberately a
# standalone crate so future Windows resources (HANDLE, LSA buffer,
# LocalAlloc, ...) can be added consistently without polluting a
# domain crate.

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[lib]
name = "win_safe"
path = "src/lib.rs"
